--- a/jonah-grier-hacker-news-clone/src/Homepage/HomePage.css
+++ b/jonah-grier-hacker-news-clone/src/Homepage/HomePage.css
@@ -9,13 +9,14 @@
 
 .navigation-bar {
 	display: flex;
-	flex-direction: row;
 }
 
-.header-navigation {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.tags::after {
+	content: ' | '
+}
+
+#submit-tag::after {
+	content: ''
 }
 
 ul {
@@ -25,6 +26,9 @@ ul {
 	padding: 0;
 	background-color: rgb(255, 91, 0);
 }
+
+
+
 li {
 	display: inline;
 }
@@ -45,6 +49,21 @@ li {
 .user-register a {
 	color: black;
 }
+
+@media screen and (max-width: 760px) {
+	#jobs-tag, #comments-tag, #show-tag  {
+		display: none;
+	}
+
+	.tags::after {
+		content: ' | '
+	}
+
+	#submit-tag::after {
+		content: '';
+	}
+}
+
 
 #hack-news-logo-container {
 	display: inline-flex;
@@ -72,10 +91,11 @@ li {
 .main-body-container-section {
 	background-color: rgb(246, 246, 239);
 	border: 1px solid black;
-	margin: 0 50px;
+	margin: -20px 50px;
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
+	height: 97vh;
 }
 
 .footer-container {
