--- a/jonah-grier-hacker-news-clone/src/Homepage/HomePage.css
+++ b/jonah-grier-hacker-news-clone/src/Homepage/HomePage.css
@@ -11,12 +11,17 @@
 	display: flex;
 }
 
+.tags a {
+	list-style-type: none;
+	color: black;
+}
 .tags::after {
-	content: ' | '
+	content: " | ";
 }
 
-#submit-tag::after {
-	content: ''
+#jobs-tag::after,
+#user-login::after {
+	content: "";
 }
 
 ul {
@@ -27,43 +32,34 @@ ul {
 	background-color: rgb(255, 91, 0);
 }
 
-
-
 li {
 	display: inline;
 }
 
-.user-login {
+#user-login {
 	float: right;
 }
 
-.user-login a {
-	color: black;
-}
-
-.user-register {
+#user-register {
 	float: right;
-	margin-right: 10px;
-}
-
-.user-register a {
-	color: black;
+	margin-right: 5px;
 }
 
 @media screen and (max-width: 760px) {
-	#jobs-tag, #comments-tag, #show-tag  {
+	#jobs-tag,
+	#comments-tag,
+	#show-tag {
 		display: none;
 	}
 
 	.tags::after {
-		content: ' | '
+		content: " | ";
 	}
 
 	#submit-tag::after {
-		content: '';
+		content: "";
 	}
 }
-
 
 #hack-news-logo-container {
 	display: inline-flex;
