--- a/jonah-grier-hacker-news-clone/src/Post/post.css
+++ b/jonah-grier-hacker-news-clone/src/Post/post.css
@@ -1,7 +1,10 @@
-.container {
-	background-color: lightgray;
-}
-
 #or-spacing::after {
 	content: " ";
+}
+
+.post-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 0px 30% 20px;
 }
