--- a/jonah-grier-hacker-news-clone/src/Register/register.css
+++ b/jonah-grier-hacker-news-clone/src/Register/register.css
@@ -1,3 +1,7 @@
+#root {
+	background-image: url("../images/external.jpg");
+	background-size: cover;
+}
 .app {
 	height: 100vh;
 }
@@ -17,4 +21,12 @@
 
 #register-outer-button {
 	display: flex;
+	background-color: none;
+	border: none;
+}
+
+#email-help {
+	color: pink;
+	font-weight: bold;
+	margin-bottom: 50px;
 }
