--- a/jonah-grier-hacker-news-clone/src/Components/Register/register.css
+++ b/jonah-grier-hacker-news-clone/src/Components/Register/register.css
@@ -1,6 +1,4 @@
 #root {
-	background-image: url("../images/external.jpg");
-	background-size: cover;
 }
 .app {
 	height: 100vh;
@@ -12,11 +10,14 @@
 	height: 100vh;
 	justify-content: center;
 	align-items: center;
+	background-image: url("../../images/external.jpg");
+	background-position: 50%;
 }
 
 .form-group {
 	align-items: center;
 	justify-content: center;
+	color: palevioletred;
 }
 
 #register-outer-button {
