--- a/jonah-grier-hacker-news-clone/src/Components/Login/login.css
+++ b/jonah-grier-hacker-news-clone/src/Components/Login/login.css
@@ -20,7 +20,20 @@
 }
 
 #register-outer-button {
+	float: left;
+}
+
+#login-back-button {
 	display: flex;
-	flex-direction: row;
-	width: 100%;
+	float: right;
+	/* margin-top: 1px; */
+	border: 1px solid rgb(0, 112, 255);
+	border-radius: 6.9%;
+	padding: 5px 12px;
+	background-color: rgb(0, 123, 255);
+}
+#login-back-button a {
+	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+	text-decoration: none;
 }
