--- a/jonah-grier-hacker-news-clone/src/Components/Register/register.css
+++ b/jonah-grier-hacker-news-clone/src/Components/Register/register.css
@@ -19,14 +19,24 @@
 	color: black;
 }
 
-#register-outer-button {
+#register-button {
 	display: flex;
+	float: left;
 	background-color: none;
 	border: none;
 }
 
-/* #email-help {
-	color: pink;
-	font-weight: bold;
-	margin-bottom: 50px;
-} */
+#back-button {
+	display: flex;
+	float: right;
+	/* margin-top: 1px; */
+	border: 1px solid rgb(0, 112, 255);
+	border-radius: 6.9%;
+	padding: 6px 12px;
+	background-color: rgb(0, 123, 255);
+}
+#back-button a {
+	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+	text-decoration: none;
+}
