--- a/jonah-grier-hacker-news-clone/src/Components/Post/post.css
+++ b/jonah-grier-hacker-news-clone/src/Components/Post/post.css
@@ -8,3 +8,21 @@
 	justify-content: center;
 	margin: 10% 30%;
 }
+
+#post-url-submit {
+	float: left;
+}
+
+#post-back-button {
+	display: flex;
+	float: right;
+	border: 1px solid rgb(0, 112, 255);
+	border-radius: 6.9%;
+	padding: 6px 12px;
+	background-color: rgb(0, 123, 255);
+}
+#post-back-button a {
+	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+	text-decoration: none;
+}
