--- a/jonah-grier-hacker-news-clone/src/Components/profile/profile.css
+++ b/jonah-grier-hacker-news-clone/src/Components/profile/profile.css
@@ -1,3 +1,6 @@
+#user-profile {
+	margin-left: 5px;
+}
 #user-home {
 	float: right;
 	margin-right: 5px;
@@ -6,4 +9,8 @@
 a {
 	text-decoration: none;
 	color: black;
+}
+
+.user-profile-settings {
+	margin: 0 auto;
 }
