--- a/jonah-grier-hacker-news-clone/src/Components/clickable_posts/individualPost.css
+++ b/jonah-grier-hacker-news-clone/src/Components/clickable_posts/individualPost.css
@@ -9,8 +9,22 @@
 	display: flex;
 	background-color: coral;
 	justify-content: center;
+	font-size: xx-large;
 }
 
 .individual-post-body {
+	display: flex;
+	flex-direction: row;
+	margin: 10px 50px;
 	border: 1px solid black;
+	min-height: 50vh;
+	align-items: center;
+	text-align: center;
+}
+
+.post-comment-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
 }
