--- a/jonah-grier-hacker-news-clone/src/Components/clickable_posts/individualPost.css
+++ b/jonah-grier-hacker-news-clone/src/Components/clickable_posts/individualPost.css
@@ -22,9 +22,32 @@
 	text-align: center;
 }
 
+.individual-add-comment {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .post-comment-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
+}
+
+#individual-post-back-button {
+	display: flex;
+	margin: 0 45%;
+	margin-top: 5px;
+	justify-content: center;
+	border: 1px solid rgb(0, 112, 255);
+	border-radius: 6.9%;
+	padding: 6px 12px;
+	background-color: rgb(0, 123, 255);
+}
+#post-back-button a {
+	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+	text-decoration: none;
 }
