Comments appearing on pages

--- a/jonah-grier-hacker-news-clone/src/Components/clickable_posts/CommentForm/addCommentForm.css
+++ b/jonah-grier-hacker-news-clone/src/Components/clickable_posts/CommentForm/addCommentForm.css
@@ -8,3 +8,11 @@ button {
 	justify-content: center;
 	align-content: center;
 }
+
+#back-button {
+	cursor: pointer;
+}
+
+a:hover {
+	color: rgb(0, 87, 197);
+}
