--- a/jonah-grier-hacker-news-clone/src/Components/clickable_posts/individualPost.css
+++ b/jonah-grier-hacker-news-clone/src/Components/clickable_posts/individualPost.css
@@ -46,8 +46,12 @@
 	padding: 6px 12px;
 	background-color: rgb(0, 123, 255);
 }
-#post-back-button a {
+#individual-post-back-button a {
 	font-family: Arial, Helvetica, sans-serif;
 	color: white;
 	text-decoration: none;
+}
+
+button {
+	margin-top: 5px;
 }
