--- a/jonah-grier-hacker-news-clone/src/Components/Post/post.css
+++ b/jonah-grier-hacker-news-clone/src/Components/Post/post.css
@@ -19,10 +19,10 @@
 	border: 1px solid rgb(0, 112, 255);
 	border-radius: 6.9%;
 	padding: 6px 12px;
-	background-color: rgb(0, 123, 255);
+	margin-top: 5px;
 }
 #post-back-button a {
 	font-family: Arial, Helvetica, sans-serif;
-	color: white;
+	color: grey;
 	text-decoration: none;
 }
