--- a/jonah-grier-hacker-news-clone/src/Components/Homepage/Navbar/Navbar.css
+++ b/jonah-grier-hacker-news-clone/src/Components/Homepage/Navbar/Navbar.css
@@ -46,10 +46,11 @@ li {
 	margin-right: 5px;
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 770px) {
 	#jobs-tag,
 	#comments-tag,
-	#show-tag {
+	#show-tag,
+	#ask-tag {
 		display: none;
 	}
 
