Added text bubble on comments for non-logged in users, removed uncommented code

--- a/jonah-grier-hacker-news-clone/src/Components/clickable_posts/individualPost.css
+++ b/jonah-grier-hacker-news-clone/src/Components/clickable_posts/individualPost.css
@@ -17,6 +17,8 @@
 	border: 1px solid black;
 	min-height: 15vh;
 	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
 
 .individual-add-comment {
