--- a/jonah-grier-hacker-news-clone/src/Components/Login/login.css
+++ b/jonah-grier-hacker-news-clone/src/Components/Login/login.css
@@ -30,10 +30,10 @@
 	border: 1px solid rgb(0, 112, 255);
 	border-radius: 6.9%;
 	padding: 5px 12px;
-	background-color: rgb(0, 123, 255);
+	/* background-color: rgb(0, 123, 255); */
 }
 #login-back-button a {
 	font-family: Arial, Helvetica, sans-serif;
-	color: white;
+	color: grey;
 	text-decoration: none;
 }
