--- a/jonah-grier-hacker-news-clone/src/Components/Register/register.css
+++ b/jonah-grier-hacker-news-clone/src/Components/Register/register.css
@@ -12,22 +12,20 @@
 
 #register-button {
 	display: flex;
-	float: right;
+	float: left;
 	background-color: none;
 	border: none;
-	margin-left: 5%;
 }
 
 #back-button {
 	display: flex;
-	float: left;
+	float: right;
 	border: 1px solid rgb(0, 112, 255);
 	border-radius: 6.9%;
 	padding: 6px 12px;
-	background-color: rgb(0, 123, 255);
 }
 #back-button a {
 	font-family: Arial, Helvetica, sans-serif;
-	color: white;
+	color: grey;
 	text-decoration: none;
 }
